snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha512
076c09f08ef30aaebd394aeb0f9aead2d3764cb6a9acd2bd9f70a5b8548a6183db256e2b33982821740d940ead7f6245eea9004ad48d7b8d5dfa2d8c993b47d3